--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "simple-icons": "^7.9.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.2.5",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
