--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@mui/icons-material": "^5.10.2",
     "@mui/lab": "^5.0.0-alpha.96",
     "@mui/material": "^5.10.2",
+    "camelcase": "^7.0.0",
+    "mdi-material-ui": "^7.5.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "simple-icons": "^7.9.0"
+    "simple-icons": "^7.9.0",
+    "typeit": "^8.7.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.2.5",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "eslint": "^8.23.0",
     "eslint-config-next": "^12.2.5",
     "schema-dts": "^1.1.0",
