--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "resume-next",
-  "version": "0.1.0",
+  "name": "resume",
+  "version": "4.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,13 +12,17 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/rubik": "^4.5.11",
+    "@formspree/core": "^2.7.1",
+    "@hookform/resolvers": "^2.9.7",
     "@mui/icons-material": "^5.10.2",
     "@mui/lab": "^5.0.0-alpha.96",
     "@mui/material": "^5.10.2",
     "mdi-material-ui": "^7.5.0",
     "next": "^12.2.5",
+    "nope-validator": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
     "simple-icons": "^7.9.0",
     "typeit": "^8.7.0"
   },
