chore: Package update

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@fontsource/rubik": "^4.5.11",
     "@formspree/core": "^2.7.1",
     "@hookform/resolvers": "^2.9.7",
-    "@mui/icons-material": "^5.10.2",
-    "@mui/lab": "^5.0.0-alpha.96",
-    "@mui/material": "^5.10.2",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "5.0.0-alpha.97",
+    "@mui/material": "^5.10.3",
     "mdi-material-ui": "^7.5.0",
     "next": "^12.2.5",
     "nope-validator": "^1.0.4",
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.2.5",
     "@svgr/webpack": "^6.3.1",
-    "@types/node": "^18.7.13",
+    "@types/node": "^18.7.14",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@welldone-software/why-did-you-render": "^7.0.1",
