--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/rubik": "^4.5.11",
-    "@formspree/core": "^2.7.1",
+    "@formspree/react": "^2.3.3",
     "@hookform/resolvers": "^2.9.7",
     "@mui/icons-material": "^5.10.3",
     "@mui/lab": "5.0.0-alpha.97",
