--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/rubik": "^4.5.11",
-    "@formspree/react": "^2.3.3",
     "@hookform/resolvers": "^2.9.7",
     "@mui/icons-material": "^5.10.3",
     "@mui/lab": "5.0.0-alpha.97",
@@ -29,6 +28,7 @@
     "typeit": "^8.7.0"
   },
   "devDependencies": {
+    "@formspree/core": "^2.7.1",
     "@next/bundle-analyzer": "^12.2.5",
     "@svgr/webpack": "^6.3.1",
     "@types/node": "^18.7.14",
