--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "eslint-config-next": "^12.2.5",
     "schema-dts": "^1.1.0",
     "typescript": "^4.8.2"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
