--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "cypress": "cypress open",
-    "test": "start-server-and-test start http://localhost:3000 cypress"
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -41,7 +40,6 @@
     "eslint": "^8.23.0",
     "eslint-config-next": "^12.2.5",
     "schema-dts": "^1.1.0",
-    "start-server-and-test": "^1.14.0",
     "typescript": "^4.8.2"
   },
   "browserslist": [
