--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,9 @@ on: [push]
 jobs:
   install:
     runs-on: ubuntu-latest
-    container: cypress/browsers:latest
+    container:
+      image: cypress/browsers:latest
+      options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -27,7 +29,9 @@ jobs:
 
   cypress:
     runs-on: ubuntu-latest
-    container: cypress/browsers:latest
+    container:
+      image: cypress/browsers:latest
+      options: --user 1001
     needs: install
     strategy:
       fail-fast: false
