--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,3 +58,4 @@ jobs:
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TZ: Asia/Hong_Kong
