--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
   install:
     runs-on: ubuntu-latest
     container:
-      image: cypress/browsers:latest
+      image: cypress/browsers:node16.14.2-slim-chrome103-ff102
       options: --user 1001
     steps:
       - name: Checkout
@@ -30,7 +30,7 @@ jobs:
   cypress:
     runs-on: ubuntu-latest
     container:
-      image: cypress/browsers:latest
+      image: cypress/browsers:node16.14.2-slim-chrome103-ff102
       options: --user 1001
     needs: install
     strategy:
