--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,10 @@
 name: Cypress E2E
 
-on: [push]
+on: [deployment_status]
 
 jobs:
-  install:
-    runs-on: ubuntu-latest
-    container:
-      image: cypress/browsers:node16.14.2-slim-chrome103-ff102
-      options: --user 1001
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Cypress install
-        uses: cypress-io/github-action@v4
-        with:
-          runTests: false
-          build: npm run build
-
-      - name: Save build folder
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          if-no-files-found: error
-          path: |
-            .next/
-            public/
-
   cypress:
+    if: github.event_name == "deployment_status" && github.event.deployment_status.state == "success"
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node16.14.2-slim-chrome103-ff102
@@ -49,13 +26,13 @@ jobs:
       - name: UI Tests - Chrome
         uses: cypress-io/github-action@v4
         with:
-          start: npm run start
-          wait-on: "http://localhost:3000"
+          install: false
           browser: chrome
           record: true
           parallel: true
           group: "UI - Chrome"
         env:
+          CYPRESS_BASE_URL: ${{ github.event.deployment_status.target_url }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TZ: Asia/Hong_Kong
