fix: Run Cypress on Vercel deploy success

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: Cypress E2E
 
-on: [push, deployment, deployment_status]
+on: [deployment_status]
 
 jobs:
   cypress:
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
+    if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node16.14.2-slim-chrome103-ff102
@@ -14,12 +14,6 @@ jobs:
       matrix:
         containers: [1, 2, 3, 4, 5]
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: |
-          echo "$GITHUB_CONTEXT"
-
       - name: Checkout
         uses: actions/checkout@v3
 
