--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "sharp": "^0.31.0",
     "simple-icons": "^7.10.0",
     "typeit": "^8.7.0"
   },
