test: Use headed browser

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
       - name: UI Tests - Chrome
         uses: cypress-io/github-action@v4
         with:
+          headed: true
           browser: chrome
           record: true
           parallel: true
