--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [deployment_status]
 
 jobs:
   cypress-install:
-    if: github.event.deployment_status.state == "success"
+    if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node18.6.0-chrome105-ff104
@@ -19,7 +19,7 @@ jobs:
           runTests: false
 
   cypress-run:
-    if: github.event.deployment_status.state == "success"
+    if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node18.6.0-chrome105-ff104
