--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     container:
       image: cypress/browsers:node18.6.0-chrome105-ff104
       options: --user 1001
-    needs: install
+    needs: cypress-install
     strategy:
       fail-fast: false
       matrix:
