--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,13 @@ jobs:
   cypress-install:
     if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
-    container: cypress/browsers:node18.6.0-chrome105-ff104
+    container:
+      # image: cypress/browsers:node18.6.0-chrome105-ff104
+      image: cypress/browsers:node16.14.2-slim-chrome103-ff102
+      options: --user 1001
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Cypress install
         uses: cypress-io/github-action@v4
@@ -20,7 +23,8 @@ jobs:
     if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     container:
-      image: cypress/browsers:node18.6.0-chrome105-ff104
+      # image: cypress/browsers:node18.6.0-chrome105-ff104
+      image: cypress/browsers:node16.14.2-slim-chrome103-ff102
       options: --user 1001
     needs: cypress-install
     strategy:
@@ -29,7 +33,7 @@ jobs:
         containers: [1, 2, 3, 4, 5]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: UI Tests - Chrome
         uses: cypress-io/github-action@v4
