--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,19 @@ jobs:
     if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     container:
-      # image: cypress/browsers:node18.6.0-chrome105-ff104
-      image: cypress/browsers:node16.14.2-slim-chrome103-ff102
+      image: cypress/browsers:node18.6.0-chrome105-ff104
       options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Cache NPM and Cypress
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/Cypress
+            node_modules
+          key: my-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
 
       - name: Cypress install
         uses: cypress-io/github-action@v4
@@ -23,8 +30,7 @@ jobs:
     if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     container:
-      # image: cypress/browsers:node18.6.0-chrome105-ff104
-      image: cypress/browsers:node16.14.2-slim-chrome103-ff102
+      image: cypress/browsers:node18.6.0-chrome105-ff104
       options: --user 1001
     needs: cypress-install
     strategy:
