--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "5.0.0-alpha.105",
     "@mui/material": "^5.10.11",
+    "@vercel/analytics": "^0.1.3",
     "mdi-material-ui": "^7.5.0",
     "next": "^13.0.0",
     "next-sitemap": "^3.1.29",
