--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "cypress": "^10.11.0",
     "eslint": "^8.26.0",
     "eslint-config-next": "^13.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "schema-dts": "^1.1.0",
     "typescript": "^4.8.4"
   },
