--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     container:
-      image: cypress/browsers:node18.6.0-chrome105-ff104
+      image: cypress/browsers:node16.17.0-chrome106
       options: --user 1001
     strategy:
       fail-fast: false
