--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/rubik": "4.5.11",
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.105",
     "@mui/material": "^5.10.11",
     "@next/font": "^13.0.0",
     "@vercel/analytics": "^0.1.3",
+    "@vercel/og": "^0.0.20",
     "mdi-material-ui": "^7.5.0",
     "next": "^13.0.0",
     "next-sitemap": "^3.1.29",
