--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@fontsource/rubik": "4.5.11",
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.10.9",
-    "@mui/lab": "^5.0.0-alpha.105",
-    "@mui/material": "^5.10.11",
-    "@next/font": "^13.0.0",
+    "@mui/lab": "5.0.0-alpha.106",
+    "@mui/material": "^5.10.12",
+    "@next/font": "^13.0.1",
     "@vercel/analytics": "^0.1.3",
     "@vercel/og": "^0.0.20",
     "mdi-material-ui": "^7.6.0",
-    "next": "^13.0.0",
+    "next": "^13.0.1",
     "next-sitemap": "^3.1.30",
     "nope-validator": "^1.0.4",
     "react": "^18.2.0",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@formspree/core": "^2.8.0",
-    "@next/bundle-analyzer": "^13.0.0",
+    "@next/bundle-analyzer": "^13.0.1",
     "@svgr/webpack": "^6.5.1",
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.24",
@@ -42,7 +42,7 @@
     "@welldone-software/why-did-you-render": "^7.0.1",
     "cypress": "^10.11.0",
     "eslint": "^8.26.0",
-    "eslint-config-next": "^13.0.0",
+    "eslint-config-next": "^13.0.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "schema-dts": "^1.1.0",
