--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "cypress": "^10.11.0",
     "eslint": "^8.26.0",
     "eslint-config-next": "^13.0.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "schema-dts": "^1.1.0",
     "typescript": "^4.8.4"
   },
