refactor: Replace absolute with alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
         "name": "next"
       }
     ],
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
