--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
       matrix:
         containers: [1, 2, 3, 4, 5]
     steps:
+      - name: GitHub Ref Debug
+        run: echo "::debug ${{  github.ref  }}"
+
       - name: Checkout
         uses: actions/checkout@v3
 
