--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cypress": "^12.5.0",
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.1.6",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
