feat: Change `scrollMargin` to `scrollPadding`

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next/font": "^13.1.6",
     "@vercel/analytics": "^0.1.8",
     "@vercel/og": "^0.0.27",
+    "map-keys-deep-lodash": "^1.2.4",
     "mdi-material-ui": "^7.6.0",
     "next": "^13.1.6",
     "next-sitemap": "^3.1.48",
@@ -34,6 +35,7 @@
     "@formspree/core": "^2.8.1",
     "@next/bundle-analyzer": "^13.1.6",
     "@svgr/webpack": "^6.5.1",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
