--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# auto generated sitemap and robots.txt
+# auto generated when buidling PROD build
 /public/sitemap.xml
 /public/robots.txt
+/static
 
 # cypress
 /cypress/screenshots
