chore: fix workflow syntax

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Cypress E2E Tests
 
-on:
-  deployment_status:
+on: deployment_status
 
+jobs:
   run-cypress-e2e-tests-on-headless-chrome:
     if: ${{ github.event.deployment_status.state == 'success' && github.event.deployment_status.environment != 'Production' }}
     runs-on: ubuntu-latest
