--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
     "**/*.js",
     "**/*.mjs",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".eslintrc.js"
   ],
   "exclude": [
     "node_modules"
