--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -3,7 +3,7 @@ name: Cypress E2E Tests
 on: deployment_status
 
 jobs:
-  run-on-headless-chrome:
+  headless-chrome:
     if: ${{ github.event.deployment_status.state == 'success' && github.event.deployment_status.environment != 'Production' }}
     runs-on: ubuntu-latest
     strategy:
