--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -21,7 +21,7 @@ jobs:
           device: mobile
           prCommentEnabled: true
           prCommentSaveOld: true
-          inPerformanceScore: "90"
+          minPerformanceScore: "90"
           minAccessibilityScore: "98"
           minBestPracticesScore: "100"
           minSeoScore: "100"
