--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Lighthouse
         uses: foo-software/lighthouse-check-action@master
+        id: lighthouse
         with:
           urls: ${{ github.event.deployment_status.target_url }}
           device: mobile
@@ -26,7 +27,7 @@ jobs:
       - name: Verify Results
         uses: foo-software/lighthouse-check-status-action@master
         with:
-          lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
+          lighthouseCheckResults: ${{ steps.lighthouse.outputs.lighthouseCheckResults }}
           minPerformanceScore: "90"
           minAccessibilityScore: "98"
           minBestPracticesScore: "100"
