--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -22,7 +22,7 @@ jobs:
           prCommentEnabled: true
           prCommentSaveOld: true
           commentUrl: https://api.github.com/repos/${{ github.repository }}/commits/${{ github.sha }}/comments
-          gitHubAccessToken: ${{ secrets.GITHUB_TOKEN }}
+          gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
           
       - name: Verify Results
         uses: foo-software/lighthouse-check-status-action@master
