--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -22,8 +22,14 @@ jobs:
           prCommentEnabled: true
           prCommentSaveOld: true
           commentUrl: https://api.github.com/repos/${{ github.repository }}/commits/${{ github.sha }}/comments
-          gitHubAccessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
-          
+          gitHubAccessToken: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@master
+        with:
+          name: Lighthouse reports
+          path: ${{ github.workspace }}/tmp/artifacts
+
       - name: Verify Results
         uses: foo-software/lighthouse-check-status-action@master
         with:
@@ -33,8 +39,3 @@ jobs:
           minBestPracticesScore: "100"
           minSeoScore: "100"
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@master
-        with:
-          name: Lighthouse reports
-          path: ${{ github.workspace }}/tmp/artifacts
