--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vercel/analytics": "^0.1.8",
     "@vercel/og": "^0.1.0",
     "deep-rename-keys-ts": "^1.0.1",
+    "lodash-es": "^4.17.21",
     "mdi-material-ui": "^7.6.0",
     "next": "^13.1.6",
     "next-sitemap": "^3.1.49",
