--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@formspree/core": "^2.8.1",
     "@next/bundle-analyzer": "^13.1.6",
     "@svgr/webpack": "^6.5.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
