--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "cypress": "^12.5.1",
+    "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.1.6",
     "eslint-plugin-import": "^2.27.5",
