feat: Make "paper" elements BG react to the section BG they are in; Use React Hook Form MUI

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/rubik": "4.5.14",
+    "@formspree/react": "^2.4.1",
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "5.0.0-alpha.119",
     "@mui/material": "^5.11.8",
+    "@mui/x-date-pickers": "^5.0.17",
     "@next/font": "^13.1.6",
     "@vercel/analytics": "^0.1.8",
     "@vercel/og": "^0.1.0",
@@ -31,10 +33,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-hook-form-mui": "^5.13.1",
     "simple-icons": "^8.4.0"
   },
   "devDependencies": {
-    "@formspree/core": "^2.8.1",
     "@next/bundle-analyzer": "^13.1.6",
     "@svgr/webpack": "^6.5.1",
     "@types/lodash-es": "^4.17.6",
