--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "jsxImportSource": "@welldone-software/why-did-you-render",
     "incremental": true,
     "plugins": [
       {
