--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/web-app-manifest": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "cypress": "^12.5.1",
     "cypress-downloadfile": "^1.2.3",
