--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "deep-rename-keys-ts": "^1.0.1",
     "lodash-es": "^4.17.21",
     "mdi-material-ui": "^7.6.0",
-    "next": "canary",
+    "next": "13.1.7-canary.10",
     "next-sitemap": "^3.1.52",
     "nope-validator": "^1.0.4",
     "react": "^18.2.0",
@@ -46,7 +46,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/web-app-manifest": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
     "cypress": "^12.5.1",
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.34.0",
