chore: Package update

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@mui/lab": "5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
     "@mui/x-date-pickers": "^5.0.19",
-    "@vercel/analytics": "^0.1.9",
+    "@vercel/analytics": "^0.1.10",
     "@vercel/og": "^0.1.0",
     "date-fns": "^2.29.3",
     "deep-rename-keys-ts": "^1.0.1",
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@formspree/core": "^2.8.1",
-    "@next/bundle-analyzer": "^13.1.6",
+    "@next/bundle-analyzer": "13.1.7-canary.17",
     "@svgr/webpack": "^6.5.1",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.13.0",
@@ -47,10 +47,10 @@
     "@types/react-dom": "^18.0.11",
     "@types/web-app-manifest": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "cypress": "^12.5.1",
+    "cypress": "^12.6.0",
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.34.0",
-    "eslint-config-next": "^13.1.6",
+    "eslint-config-next": "13.1.7-canary.17",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
