Revert "fix: Remove unnecessary `@next/font`"
This reverts commit f06d770c5bd42bca63a28c08d54fadf9108e9d53.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/lab": "5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
     "@mui/x-date-pickers": "^5.0.19",
+    "@next/font": "^13.1.6",
     "@vercel/analytics": "^0.1.10",
     "@vercel/og": "^0.1.0",
     "date-fns": "^2.29.3",
