chore: Package update

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.11.9",
     "@mui/lab": "5.0.0-alpha.120",
-    "@mui/material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "@mui/x-date-pickers": "^5.0.19",
     "@vercel/analytics": "^0.1.10",
     "@vercel/og": "^0.1.0",
@@ -27,7 +27,7 @@
     "deep-rename-keys-ts": "^1.0.1",
     "lodash-es": "^4.17.21",
     "mdi-material-ui": "^7.6.0",
-    "next": "13.1.7-canary.20",
+    "next": "canary",
     "next-sitemap": "^3.1.52",
     "nope-validator": "^1.0.4",
     "react": "^18.2.0",
@@ -39,18 +39,18 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@formspree/core": "^2.8.1",
-    "@next/bundle-analyzer": "13.1.7-canary.20",
+    "@next/bundle-analyzer": "canary",
     "@svgr/webpack": "^6.5.1",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/web-app-manifest": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
     "cypress": "^12.6.0",
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.34.0",
-    "eslint-config-next": "13.1.7-canary.20",
+    "eslint-config-next": "canary",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
