--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.10",
-    "@mui/x-date-pickers": "^5.0.19",
+    "@mui/x-date-pickers": "^5.0.20",
     "@vercel/analytics": "^0.1.10",
     "@vercel/og": "^0.1.0",
     "date-fns": "^2.29.3",
     "deep-rename-keys-ts": "^1.0.1",
     "lodash-es": "^4.17.21",
-    "next": "canary",
+    "next": "^13.2.0",
     "next-sitemap": "^3.1.52",
     "nope-validator": "^1.0.4",
     "react": "^18.2.0",
@@ -38,10 +38,10 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@formspree/core": "^2.8.1",
-    "@next/bundle-analyzer": "canary",
+    "@next/bundle-analyzer": "^13.2.0",
     "@svgr/webpack": "^6.5.1",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.14.0",
+    "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/web-app-manifest": "^1.0.2",
@@ -49,7 +49,7 @@
     "cypress": "^12.6.0",
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.34.0",
-    "eslint-config-next": "canary",
+    "eslint-config-next": "^13.2.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
