feat: Migrate `robots.txt` to route

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vercel/analytics": "^0.1.10",
     "@vercel/og": "^0.1.0",
     "date-fns": "^2.29.3",
+    "dedent": "^0.7.0",
     "deep-rename-keys-ts": "^1.0.1",
     "lodash-es": "^4.17.21",
     "next": "^13.2.0",
@@ -40,6 +41,7 @@
     "@formspree/core": "^2.8.1",
     "@next/bundle-analyzer": "^13.2.0",
     "@svgr/webpack": "^6.5.1",
+    "@types/dedent": "^0.7.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
