feat: Migrate sitemap to route handler

--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "@vercel/analytics": "^0.1.10",
     "@vercel/og": "^0.1.0",
     "date-fns": "^2.29.3",
-    "dedent": "^0.7.0",
     "deep-rename-keys-ts": "^1.0.1",
+    "endent": "^2.1.0",
     "lodash-es": "^4.17.21",
     "next": "^13.2.1",
-    "next-sitemap": "^3.1.52",
     "nope-validator": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,14 +40,13 @@
     "@formspree/core": "^2.8.1",
     "@next/bundle-analyzer": "^13.2.1",
     "@svgr/webpack": "^6.5.1",
-    "@types/dedent": "^0.7.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/web-app-manifest": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "cypress": "^12.6.0",
+    "cypress": "^12.7.0",
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.2.1",
