--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap --config next-sitemap.config.mjs",
     "start": "next start",
     "lint": "next lint",
     "cypress": "cypress open",
@@ -27,6 +28,7 @@
     "endent": "^2.1.0",
     "lodash-es": "^4.17.21",
     "next": "^13.2.1",
+    "next-sitemap": "^3.1.52",
     "nope-validator": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
