chore: Package update

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@fontsource/rubik": "4.5.14",
     "@formspree/react": "^2.4.1",
     "@hookform/resolvers": "^2.9.11",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/lab": "^5.0.0-alpha.120",
-    "@mui/material": "^5.11.10",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "5.0.0-alpha.121",
+    "@mui/material": "^5.11.11",
     "@mui/x-date-pickers": "^5.0.20",
     "@vercel/analytics": "^0.1.10",
     "@vercel/og": "^0.2.0",
