chore: Package update

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "deep-rename-keys-ts": "^1.0.1",
     "endent": "^2.1.0",
     "lodash-es": "^4.17.21",
-    "next": "canary",
+    "next": "^13.2.2",
     "next-sitemap": "^3.1.55",
     "nope-validator": "^1.0.4",
     "react": "^18.2.0",
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@formspree/core": "^2.8.1",
-    "@next/bundle-analyzer": "canary",
+    "@next/bundle-analyzer": "^13.2.2",
     "@svgr/webpack": "^6.5.1",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.14.2",
@@ -50,7 +50,7 @@
     "cypress": "^12.7.0",
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.35.0",
-    "eslint-config-next": "canary",
+    "eslint-config-next": "^13.2.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
