--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@next/bundle-analyzer": "^13.2.3",
     "@svgr/webpack": "^6.5.1",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.14.2",
+    "@types/node": "^18.14.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/web-app-manifest": "^1.0.2",
@@ -51,6 +51,7 @@
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.3",
+    "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
