refactor: Use prettier

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@formspree/core": "^2.8.1",
     "@next/bundle-analyzer": "^13.2.3",
     "@svgr/webpack": "^6.5.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.14.3",
     "@types/react": "^18.0.28",
@@ -51,10 +52,9 @@
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.3",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "2.8.4",
     "schema-dts": "^1.1.2",
     "typescript": "^4.9.5"
   },
