--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "**/*.mjs",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".eslintrc.cjs"
+    ".eslintrc.js"
   ],
   "exclude": ["node_modules"]
 }
