--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@formspree/react": "^2.4.1",
     "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "5.0.0-alpha.121",
+    "@mui/lab": "^5.0.0-alpha.121",
     "@mui/material": "^5.11.11",
     "@mui/x-date-pickers": "^5.0.20",
     "@vercel/analytics": "^0.1.11",
