--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@formspree/react": "^2.4.1",
     "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.121",
-    "@mui/material": "^5.11.11",
+    "@mui/lab": "5.0.0-alpha.122",
+    "@mui/material": "^5.11.12",
     "@mui/x-date-pickers": "^5.0.20",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.3.0",
@@ -47,7 +47,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/web-app-manifest": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
     "cypress": "^12.7.0",
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.35.0",
