--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.*js"],
+  "include": ["**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "."],
   "exclude": ["node_modules"]
 }
