--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap --config next-sitemap.config.mjs",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --write .",
