--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/og": "^0.4.0",
     "date-fns": "^2.29.3",
     "deep-rename-keys-ts": "^1.0.1",
+    "framer-motion": "^10.6.0",
     "lodash-es": "^4.17.21",
     "next": "^13.2.4",
     "next-sitemap": "^4.0.5",
