--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "deep-rename-keys-ts": "^1.0.1",
     "framer-motion": "^10.8.4",
     "lodash-es": "^4.17.21",
+    "mdi-material-ui": "^7.6.0",
     "next": "^13.2.4",
     "next-sitemap": "^4.0.6",
     "react": "^18.2.0",
