test: complete experience test suite

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig",
   "compilerOptions": {
     "target": "es5",
-    "lib": ["es5", "dom"],
+    "lib": ["esnext", "dom"],
     "types": ["cypress", "node"]
   },
   "include": ["**/*.ts"]
