--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/x-date-pickers": "^6.0.4",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.5.0",
+    "contentful": "beta-v10",
     "date-fns": "^2.29.3",
     "deep-rename-keys-ts": "^1.0.1",
     "framer-motion": "^10.10.0",
@@ -31,6 +32,7 @@
     "mdi-material-ui": "^7.7.0",
     "next": "^13.2.4",
     "next-sitemap": "^4.0.6",
+    "pdfjs-dist": "^3.5.141",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
