feat: test for dynamically render PDF thumbnail

--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "mdi-material-ui": "^7.7.0",
     "next": "^13.2.4",
     "next-sitemap": "^4.0.6",
-    "pdfjs-dist": "^3.5.141",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hook-form-mui": "^6.0.1",
+    "react-pdf": "^6.2.2",
     "server-only": "^0.0.1",
     "simple-icons": "^8.9.0",
     "zod": "^3.21.4"
@@ -51,6 +51,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@types/react-pdf": "^6.2.0",
     "@types/web-app-manifest": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
