--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
@@ -19,50 +18,48 @@
     "@formspree/react": "^2.4.1",
     "@hookform/resolvers": "^3.0.1",
     "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "5.0.0-alpha.125",
-    "@mui/material": "^5.11.16",
-    "@mui/x-date-pickers": "^6.0.4",
+    "@mui/lab": "5.0.0-alpha.126",
+    "@mui/material": "^5.12.0",
+    "@mui/x-date-pickers": "^6.1.0",
     "@vercel/analytics": "^0.1.11",
-    "@vercel/og": "^0.5.0",
     "contentful": "beta-v10",
     "date-fns": "^2.29.3",
     "deep-rename-keys-ts": "^1.0.1",
-    "framer-motion": "^10.10.0",
+    "framer-motion": "^10.11.4",
     "lodash-es": "^4.17.21",
     "mdi-material-ui": "^7.7.0",
-    "next": "^13.2.4",
-    "next-sitemap": "^4.0.6",
+    "next": "canary",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hook-form-mui": "^6.0.1",
     "react-pdf": "^6.2.2",
     "server-only": "^0.0.1",
-    "simple-icons": "^8.9.0",
+    "simple-icons": "^8.10.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@formspree/core": "^2.8.1",
-    "@next/bundle-analyzer": "^13.2.4",
+    "@next/bundle-analyzer": "^13.3.0",
     "@svgr/webpack": "^7.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
+    "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
     "@types/react-pdf": "^6.2.0",
     "@types/web-app-manifest": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "cypress": "^12.9.0",
     "cypress-downloadfile": "^1.2.3",
-    "eslint": "^8.37.0",
-    "eslint-config-next": "^13.2.4",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "2.8.7",
     "schema-dts": "^1.1.2",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
   },
   "browserslist": [
     "defaults"
