feat: Add icons and manifest. Icons not fully working

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@mui/material": "^5.12.0",
     "@mui/x-date-pickers": "^6.1.0",
     "@vercel/analytics": "^0.1.11",
-    "contentful": "beta-v10",
+    "contentful": "^10.0.0",
     "date-fns": "^2.29.3",
     "deep-rename-keys-ts": "^1.0.1",
-    "framer-motion": "^10.11.5",
+    "framer-motion": "^10.11.6",
     "lodash-es": "^4.17.21",
     "mdi-material-ui": "^7.7.0",
     "next": "canary",
@@ -42,11 +42,10 @@
     "@faker-js/faker": "^7.6.0",
     "@formspree/core": "^2.8.1",
     "@next/bundle-analyzer": "^13.3.0",
-    "@svgr/webpack": "^7.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.34",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-pdf": "^6.2.0",
     "@types/web-app-manifest": "^1.0.2",
