--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@formspree/core": "^2.8.1",
-    "@next/bundle-analyzer": "^13.3.0",
+    "@next/bundle-analyzer": "canary",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.15.11",
@@ -54,7 +54,7 @@
     "cypress": "^12.9.0",
     "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.38.0",
-    "eslint-config-next": "^13.3.0",
+    "eslint-config-next": "canary",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "2.8.7",
     "schema-dts": "^1.1.2",
