chore: Package update

--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "5.0.0-alpha.127",
     "@mui/material": "^5.12.1",
-    "@mui/x-date-pickers": "^6.2.0",
-    "@vercel/analytics": "^0.1.11",
+    "@mui/x-date-pickers": "^6.2.1",
+    "@vercel/analytics": "^1.0.0",
     "contentful": "^10.1.0",
     "date-fns": "^2.29.3",
     "deep-rename-keys-ts": "^1.0.1",
     "framer-motion": "^10.12.4",
     "lodash-es": "^4.17.21",
     "mdi-material-ui": "^7.7.0",
-    "next": "canary",
+    "next": "^13.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
@@ -41,11 +41,11 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@formspree/core": "^2.8.1",
-    "@next/bundle-analyzer": "canary",
+    "@next/bundle-analyzer": "^13.3.1",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.37",
+    "@types/node": "^18.15.13",
+    "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "@types/react-pdf": "^6.2.0",
     "@types/web-app-manifest": "^1.0.2",
@@ -53,8 +53,8 @@
     "@typescript-eslint/parser": "^5.59.0",
     "cypress": "^12.10.0",
     "cypress-downloadfile": "^1.2.3",
-    "eslint": "^8.38.0",
-    "eslint-config-next": "canary",
+    "eslint": "^8.39.0",
+    "eslint-config-next": "^13.3.1",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "2.8.7",
     "schema-dts": "^1.1.2",
