--- a/package.json
+++ b/package.json
@@ -14,46 +14,46 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/rubik": "4.5.14",
+    "@fontsource/rubik": "^5.0.1",
     "@formspree/react": "^2.4.1",
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "5.0.0-alpha.129",
-    "@mui/material": "^5.13.0",
-    "@mui/x-date-pickers": "^6.4.0",
+    "@mui/lab": "5.0.0-alpha.131",
+    "@mui/material": "^5.13.2",
+    "@mui/x-date-pickers": "^6.5.0",
     "@vercel/analytics": "^1.0.1",
-    "contentful": "^10.2.0",
+    "contentful": "^10.2.1",
     "date-fns": "^2.30.0",
     "deep-rename-keys-ts": "^1.0.1",
-    "framer-motion": "^10.12.10",
+    "framer-motion": "^10.12.14",
     "lodash-es": "^4.17.21",
     "mdi-material-ui": "^7.7.0",
-    "next": "^13.4.2",
+    "next": "^13.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-hook-form-mui": "^6.0.1",
+    "react-hook-form-mui": "^6.1.0",
     "react-pdf": "^6.2.2",
     "server-only": "^0.0.1",
-    "simple-icons": "^8.13.0",
+    "simple-icons": "^8.15.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.0",
+    "@faker-js/faker": "^8.0.1",
     "@formspree/core": "^2.8.1",
-    "@next/bundle-analyzer": "^13.4.2",
+    "@next/bundle-analyzer": "^13.4.3",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.16.8",
+    "@types/node": "^18.16.14",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/react-pdf": "^6.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "cypress": "^12.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "cypress": "^12.13.0",
     "cypress-downloadfile": "^1.2.3",
-    "eslint": "^8.40.0",
-    "eslint-config-next": "^13.4.2",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.3",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "2.8.8",
     "schema-dts": "^1.1.2",
