chore: Package update

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.0.0",
   "private": true,
   "scripts": {
+    "postinstall": "node ./postinstall.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -25,15 +26,15 @@
     "contentful": "^10.2.1",
     "date-fns": "^2.30.0",
     "deep-rename-keys-ts": "^1.0.1",
-    "framer-motion": "^10.12.14",
+    "framer-motion": "^10.12.16",
     "lodash-es": "^4.17.21",
     "mdi-material-ui": "^7.7.0",
     "next": "^13.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-hook-form-mui": "^6.1.0",
-    "react-pdf": "^6.2.2",
+    "react-hook-form-mui": "^6.1.1",
+    "react-pdf": "^7.0.1",
     "server-only": "^0.0.1",
     "simple-icons": "^8.15.0",
     "zod": "^3.21.4"
@@ -45,9 +46,8 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.14",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "@types/react-pdf": "^6.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "cypress": "^12.13.0",
