--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write .",
-    "cypress": "cypress open",
-    "test": "cypress run --browser edge"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -48,8 +46,6 @@
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
-    "cypress": "^12.13.0",
-    "cypress-downloadfile": "^1.2.3",
     "eslint": "^8.41.0",
     "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.8.0",
